Applied CPD,PMD and checkStyle.
SVN-Revision: 22006